fix: axsize should not be hardwired for peripheral

--- a/ysyxSoC_sim/Makefile
+++ b/ysyxSoC_sim/Makefile
@@ -17,7 +17,7 @@ CFLAGS += -DD
 VSRCS  += $(shell find $(pwd)/../build/cpu | grep -xPo '.*\.v')
 VSRCS  += $(shell find $(peripheral_path) | grep -xPo '.*\.v')
 VSRCS  += $(pwd)/ysyxSoCFull.v
-VFLAGS += -I$(peripheral_path)/uart16550/rtl -I$(peripheral_path)/spi/rtl# -DFAST_SPI_FLASH
+VFLAGS += -I$(peripheral_path)/uart16550/rtl -I$(peripheral_path)/spi/rtl -DFAST_FLASH
 CSRCS  += $(peripheral_path)/spiFlash/spiFlash.cpp $(pwd)/sim_main.cpp
 VFLAGS += --timescale "1ns/1ns" -Wno-WIDTH --top ysyxSoCFull --exe -j $(cpuNum)
 VFLAGS += --threads $(cpuNum) -cc $(VSRCS)
